services/root/deployment/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: root
  namespace: supernetes
  labels:
    app: root

spec:
  replicas: 1
  selector:
    matchLabels:
      app: root
  template:
    metadata:
      labels:
        app: root
    spec:
      containers:
        - name: root
          image: sjc.ocir.io/axlfudrjenut/supernetes/root:latest 
          resources:
            limits:
              cpu: 100m 
              memory: "128Mi"
          ports:
            - name: http
              containerPort: 80
