services/root/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: root
  namespace: supernetes

spec:
  ports:
    - name: http
      port: 80
      targetPort: http

  selector:
    app: root
